--- a/package.json
+++ b/package.json
@@ -15,13 +15,15 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.37.0",
     "eslint-config-next": "13.3.0",
+    "nanoid": "^4.0.2",
     "next": "13.3.0",
     "postcss": "8.4.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-responsive-carousel": "^3.2.23",
     "tailwindcss": "3.3.1",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "zustand": "^4.3.7"
   },
   "devDependencies": {
     "prettier": "^2.8.7",
